--- a/index.html
+++ b/index.html
@@ -7,12 +7,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css -->
     <link rel="stylesheet" href="src/style.css">
+    <!-- bootsrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>world-clock</title>
 </head>
 
 <body>
-    <h1>world-clock</h1>
-    <footer>Codes by Isabel.V and is <a href="" target="_blank">Open-sourced-code</a></footer>
+    <!-- START big container -->
+    <div class="container">
+        <!-- START row h1 and dropdown(select) -->
+        <div class="row">
+            <!-- START first colmn (h1) -->
+            <div class="col-lg-6 col-md-12">
+                <h1>World Clock</h1>
+            </div>
+            <!-- END first colmn (h1) -->
+            <!-- START second colmn (dropdown) -->
+            <div class="col-lg-6 col-md-12 dropdown">
+                <select name="country" id="countrySelect">
+                    <option value="selectOption">Select option</option>
+                    <option value="london">London</option>
+                    <option value="rome">Rome</option>
+                    <option value="eindhoven">Eindhoven</option>
+                </select>
+            </div>
+            <!-- END second colmn (dropdown) -->
+        </div>
+        <!-- End row h1 and dropdown(select)-->
+
+        <!-- START row city && date && hour 1 -->
+        <div class="row">
+            <!-- START first colmn -->
+            <div class="col-lg-6 col-md-12">
+                <ul>
+                    <li>London</li>
+                    <li>august 20th 2022</li>
+                </ul>
+            </div>
+            <!-- END first colmn -->
+            <!-- START seconde colmn -->
+            <div class="col-lg-6 col-md-12">
+                12:00 A.M
+            </div>
+            <!-- END seconde colmn -->
+        </div>
+        <!-- End row city && date && hour 1-->
+
+        <!-- START row city && date && hour 2-->
+        <div class="row">
+            <!-- START first colmn -->
+            <div class="col-lg-6 col-md-12">
+                <ul>
+                    <li>Paris</li>
+                    <li>august 20th 2022</li>
+                </ul>
+            </div>
+            <!-- END first colmn -->
+            <!-- START seconde colmn -->
+            <div class="col-lg-6 col-md-12">
+                12:00 A.M
+            </div>
+            <!-- END seconde colmn -->
+        </div>
+        <!-- End row city && date && hour 2-->
+        <footer>Codes by Isabel.V and is <a href="" target="_blank">Open-sourced-code</a></footer>
+    </div>
+    <!-- END big container -->
     <script src="src/main.js"></script>
 </body>
 
