--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- css -->
-    <link rel="stylesheet" href="src/style.css">
     <!-- bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- css -->
+    <link rel="stylesheet" href="src/style.css">
     <title>world-clock</title>
 </head>
 
 <body>
     <!-- START big container -->
-    <div class="container">
+    <div class="bigContainer">
         <!-- START row h1 and dropdown(select) -->
         <div class="row">
             <!-- START first colmn (h1) -->
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 containerH1">
                 <h1>World Clock</h1>
             </div>
             <!-- END first colmn (h1) -->
@@ -39,38 +39,57 @@
         <!-- START row city && date && hour 1 -->
         <div class="row">
             <!-- START first colmn -->
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 countryDate">
                 <ul>
-                    <li>London</li>
+                    <li class="country">London</li>
                     <li>august 20th 2022</li>
                 </ul>
             </div>
             <!-- END first colmn -->
             <!-- START seconde colmn -->
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 clock">
                 12:00 A.M
             </div>
             <!-- END seconde colmn -->
         </div>
         <!-- End row city && date && hour 1-->
-
+        <hr>
         <!-- START row city && date && hour 2-->
         <div class="row">
             <!-- START first colmn -->
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 countryDate">
                 <ul>
-                    <li>Paris</li>
+                    <li class="country">Paris</li>
                     <li>august 20th 2022</li>
                 </ul>
             </div>
             <!-- END first colmn -->
             <!-- START seconde colmn -->
-            <div class="col-lg-6 col-md-12">
+            <div class="col-lg-6 col-md-12 clock">
                 12:00 A.M
             </div>
             <!-- END seconde colmn -->
         </div>
         <!-- End row city && date && hour 2-->
+        <hr>
+        <!-- START row city && date && hour 3-->
+        <div class="row">
+            <!-- START first colmn -->
+            <div class="col-lg-6 col-md-12 countryDate">
+                <ul>
+                    <li class="country">Rome</li>
+                    <li>august 20th 2022</li>
+                </ul>
+            </div>
+            <!-- END first colmn -->
+            <!-- START seconde colmn -->
+            <div class="col-lg-6 col-md-12 clock">
+                12:00 A.M
+            </div>
+            <!-- END seconde colmn -->
+        </div>
+        <!-- End row city && date && hour 3-->
+        <br>
         <footer>Codes by Isabel.V and is <a href="" target="_blank">Open-sourced-code</a></footer>
     </div>
     <!-- END big container -->
