--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         <div class="row">
             <!-- START first colmn -->
             <div class="col-lg-6 col-md-12 countryDate">
-                <ul>
-                    <li class="country">London</li>
-                    <li>august 20th 2022</li>
+                <ul class="city">
+                    <li class="countryStyle">London</li>
+                    <li class="date">august 20th 2022</li>
                 </ul>
             </div>
             <!-- END first colmn -->
             <!-- START seconde colmn -->
-            <div class="col-lg-6 col-md-12 clock">
-                12:00 A.M
+            <div class="col-lg-6 col-md-12 clock time">
+                12:00:00 <small> AM </small>
             </div>
             <!-- END seconde colmn -->
         </div>
@@ -58,15 +58,15 @@
         <div class="row">
             <!-- START first colmn -->
             <div class="col-lg-6 col-md-12 countryDate">
-                <ul>
-                    <li class="country">Paris</li>
-                    <li>august 20th 2022</li>
+                <ul class="city">
+                    <li class="countryStyle">Paris</li>
+                    <li class="date">august 20th 2022</li>
                 </ul>
             </div>
             <!-- END first colmn -->
             <!-- START seconde colmn -->
-            <div class="col-lg-6 col-md-12 clock">
-                12:00 A.M
+            <div class="col-lg-6 col-md-12 clock time">
+                12:00:00 <small> AM </small>
             </div>
             <!-- END seconde colmn -->
         </div>
@@ -75,16 +75,16 @@
         <!-- START row city && date && hour 3-->
         <div class="row">
             <!-- START first colmn -->
-            <div class="col-lg-6 col-md-12 countryDate">
-                <ul>
-                    <li class="country">Rome</li>
-                    <li>august 20th 2022</li>
+            <div class="col-lg-6 col-md-12 countryDate time">
+                <ul class="city">
+                    <li class="countryStyle">Rome</li>
+                    <li class="date">august 20th 2022</li>
                 </ul>
             </div>
             <!-- END first colmn -->
             <!-- START seconde colmn -->
-            <div class="col-lg-6 col-md-12 clock">
-                12:00 A.M
+            <div class="col-lg-6 col-md-12 clock time">
+                12:00:00 <small> AM </small>
             </div>
             <!-- END seconde colmn -->
         </div>
