--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="src/style.css">
     <title>world-clock</title>
@@ -40,7 +42,7 @@
         <div class="row">
             <!-- START first colmn -->
             <div class="col-lg-6 col-md-12 countryDate">
-                <ul class="city">
+                <ul class="city" id="london">
                     <li class="countryStyle">London</li>
                     <li class="date">august 20th 2022</li>
                 </ul>
@@ -58,7 +60,7 @@
         <div class="row">
             <!-- START first colmn -->
             <div class="col-lg-6 col-md-12 countryDate">
-                <ul class="city">
+                <ul class="city" id="paris">
                     <li class="countryStyle">Paris</li>
                     <li class="date">august 20th 2022</li>
                 </ul>
@@ -76,7 +78,7 @@
         <div class="row">
             <!-- START first colmn -->
             <div class="col-lg-6 col-md-12 countryDate time">
-                <ul class="city">
+                <ul class="city" id="rome">
                     <li class="countryStyle">Rome</li>
                     <li class="date">august 20th 2022</li>
                 </ul>
