--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
         <!-- End row h1 and dropdown(select)-->
 
         <div id="cities" class="container text-center">
-            <div class="row" class="city" id="los-angeles">
+            <div class="row city" id="london">
                 <div class="col-lg-6 col-md-12">
-                    <h2>Los Angeles</h2>
+                    <h2>london</h2>
                     <div class="date">...</div>
                 </div>
-                <div class="col-lg-6 col-md-12" class="time">...</div>
+                <div class="col-lg-6 col-md-12 time">...</div>
             </div>
             <hr>
-            <div class="row" class="city" id="paris">
+            <div class="row city" id="paris">
                 <div class="col-lg-6 col-md-12">
                     <h2>Paris</h2>
                     <div class="date">...</div>
                 </div>
-                <div class="col-lg-6 col-md-12" class="time">...</div>
+                <div class="col-lg-6 col-md-12 time">...</div>
             </div>
         </div>
         <br>
