added classes html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="col-lg-6 col-md-12 dropdown">
-                <select name="country" id="countrySelect">
+                <select name="country" id="city">
                     <option value="selectOption">Select option</option>
                     <option value="london">London</option>
                     <option value="rome">Rome</option>
@@ -38,9 +38,9 @@
         <!-- End row h1 and dropdown(select)-->
 
         <div id="cities" class="container text-center">
-            <div class="row city" id="london">
+            <div class="row city" id="ohio">
                 <div class="col-lg-6 col-md-12">
-                    <h2>london</h2>
+                    <h2>Ohio</h2>
                     <div class="date">...</div>
                 </div>
                 <div class="col-lg-6 col-md-12 time">...</div>
