updated. function updateTime()

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <!-- End row h1 and dropdown(select)-->
 
         <div class="container text-center" id="cities">
-            <div class="row city" id="ohio">
+            <div class="row city" id="Santa-Isabel">
                 <div class="col-lg-6 col-md-12">
-                    <h2>Ohio</h2>
+                    <h2>Santa Isabel</h2>
                     <div class="date">...</div>
                 </div>
                 <div class="col-lg-6 col-md-12 time">...</div>
