--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="col-lg-6 col-md-12 dropdown">
                 <select name="country" id="city">
                     <option value="selectOption">Select option</option>
+                    <option value="current">My current location</option>
                     <option value="Europe/London">London</option>
                     <option value="America/Los_Angeles">Los Angeles</option>
                     <option value="Asia/Bangkok">Bangkok</option>
