changed style && html of footer

--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
             </div>
         </div>
         <br>
-        <footer>Codes by Isabel.V and is <a href="" target="_blank">Open-sourced-code</a></footer>
     </div>
     <!-- END big container -->
+    <footer>Codes by Isabel.V and is <a href="https://github.com/Isa18V/world-clock"
+            target="_blank">Open-sourced-code</a></footer>
     <script src="src/main.js"></script>
+
 </body>
 
 </html>
